--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <div  class="encabezado"></div>
 <div  class="menu"></div>
 <div  class="contenedor2">
-    <div  class="izquierdo"></div>
+    <div  class="izquierdo">
+        Valeria Espinosa Henao y
+        Mariangel Ortiz Escarraga
+    </div>
     <div class="centro"></div>
     <div  class="derecho"></div>
 </div>
