actualizacion 1 27 de marzo

--- a/Matematicas.html
+++ b/Matematicas.html
@@ -36,7 +36,28 @@
         Valeria Espinosa Henao y
         Mariangel Ortiz Escarraga
     </div>
-    <div class="centro"></div>
+    <div class="centro">  
+
+        <p></p>
+        
+
+
+        Los 10 casos de factorización
+        Suma o diferencia de cubos perfectos.
+        Factor común por agrupación de terminos. ...
+        Suma o diferencia de dos potencias iguales. ...
+
+        <p></p>
+        Factor Común. ...
+        Trinomio por la forma ax2 + bx + c. ...
+        Trinomio cuadrado perfecto por adicion y sustracción.
+        Trinomio Cuadrado Perfecto.
+        Trinomio de la forma x2 + bx + c.
+        Más elementos…
+    
+
+
+    </div>
     <div  class="derecho"></div>
 </div>
 
