--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div  class="menu">
 
     <div  class="Sociales">
-    <a href="Sociales.html">Asignatura de Sociales</a>
+    <a href="Sociales.html">Asignatura de Sociales</a> 
     </div>
     <div  class="Ingles">
         <a href="Ingles.html">Asignatura de ingles</a>
@@ -36,7 +36,12 @@
         Valeria Espinosa Henao y
         Mariangel Ortiz Escarraga
     </div>
-    <div class="centro"></div>
+    <div class="centro">
+
+
+    
+    
+    </div>
     <div  class="derecho"></div>
 </div>
 
