--- a/Tecnologia.html
+++ b/Tecnologia.html
@@ -11,7 +11,9 @@
 <body>
     <div  class="contenedor">
 
-        <div  class="encabezado"></div>
+        <div  class="encabezado">
+            Asignatura de Tecnología.
+        </div>
 <div  class="menu">
 
     <div  class="Sociales">
@@ -33,8 +35,10 @@
 </div>
 <div  class="contenedor2">
     <div  class="izquierdo">
-        Valeria Espinosa Henao y
-        Mariangel Ortiz Escarraga
+        Valeria Espinosa Henao.
+        <p></p>
+
+        Mariangel Ortiz Escarraga.
     </div>
     <div class="centro">
         Recursos renovables y no renovables.
