--- a/tecnologia2.html
+++ b/tecnologia2.html
@@ -205,7 +205,23 @@ EJEMPLO DE MENÚ DESPLEGABLE
 
 
 
+</div> 
+<div  class="contenido">
+  <div  class="imagentecno">
+  
+  </div>         
+  <div class="textotecno">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, laudantium minima laboriosam saepe in aliquid reprehenderit, ea suscipit vitae vero eligendi eaque impedit praesentium aspernatur eius veritatis dolorum nostrum itaque.
+
+  </div>    
+     
+
+     
 </div>
+
+
+
+
 
 </body>
 
