--- a/sociales2.html
+++ b/sociales2.html
@@ -233,6 +233,7 @@
 
 </div>
 
+
 <div  class="contenido">
 
     <div  class="textosoc">
@@ -262,7 +263,14 @@ Cambios culturales y sociales son explicados en el siguiente video:
 video*
 <br><br><br>
                                                                                          V.M.NOTICIA.
+                                                                                         <br>
 
+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+                                                                                         <br>
+                                                                                         MAPA MENTAL. LA CONDICIÓN HUMANA.
+                                                                                        <br><br>
+
+                               <div  class="imagensoc"></div>                                                          
 
 
 
