--- a/sociales2.html
+++ b/sociales2.html
@@ -235,7 +235,7 @@
 
 
 <div  class="contenido">
-
+<div  class="imagensoci"></div>
     <div  class="textosoc">
 
         Independencia de las colonias americanas.
@@ -253,7 +253,13 @@ Cambios políticos y económicos:
 <br>
 <br>
 
-Podcast*
+<br>
+<br>
+<audio controls>
+
+    <source src="Podcast. sociales.mp3">
+</audio>
+
 
 
 <br><br>
@@ -263,9 +269,9 @@ Cambios culturales y sociales son explicados en el siguiente video:
 video*
 <br><br><br>
                                                                                          V.M.NOTICIA.
-                                                                                         <br>
+                                                                                         <br><br><br>
 
-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+
                                                                                          <br>
                                                                                          MAPA MENTAL. LA CONDICIÓN HUMANA.
                                                                                         <br><br>
