--- a/sociales2.html
+++ b/sociales2.html
@@ -235,7 +235,7 @@
 
 
 <div  class="contenido">
-<div  class="imagensoci"></div>
+
     <div  class="textosoc">
 
         Independencia de las colonias americanas.
@@ -253,13 +253,7 @@ Cambios políticos y económicos:
 <br>
 <br>
 
-<br>
-<br>
-<audio controls>
-
-    <source src="Podcast. sociales.mp3">
-</audio>
-
+Podcast*
 
 
 <br><br>
@@ -269,7 +263,7 @@ Cambios culturales y sociales son explicados en el siguiente video:
 video*
 <br><br><br>
                                                                                          V.M.NOTICIA.
-                                                                                         <br><br><br>
+                                                                                         <br>
 
 
                                                                                          <br>
