--- a/sociales2.html
+++ b/sociales2.html
@@ -235,7 +235,7 @@
 
 
 <div  class="contenido">
-
+<div  class="imagensoci"></div>
     <div  class="textosoc">
 
         Independencia de las colonias americanas.
@@ -253,7 +253,13 @@ Cambios políticos y económicos:
 <br>
 <br>
 
-Podcast*
+<br>
+<br>
+<audio controls>
+
+    <source src="Podcast. sociales.mp3">
+</audio>
+
 
 
 <br><br>
@@ -262,8 +268,9 @@ Cambios culturales y sociales son explicados en el siguiente video:
  <br><br>
 video*
 <br><br><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0ZzqzNKAOLg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                                                                          V.M.NOTICIA.
-                                                                                         <br>
+                                                                                         <br><br><br>
 
 
                                                                                          <br>
