--- a/ingles2.html
+++ b/ingles2.html
@@ -20,11 +20,12 @@
 
 <body>
 
+  <div  class="fondoingles2"></div>
 <div class="contenedor">
 
 <div class="encabezado">
 <br>
-    PÁGINA WEB.  V.M.NOTICIA.
+   ENFERMEDADES EN INGLES.
 
 </div>
 
@@ -211,7 +212,7 @@
 
 
 <div  class="contenido">
-    
+    <div  class="imagening"></div>
 <div  class="textoing">
 
 
@@ -219,7 +220,7 @@
     <br><br>
 
     ingles-español
-    <br><br><br>
+    <br><br><br><br><br><br><br><br><br><br>
     
     1. An allergy: a negative reaction to something you eat or
     touch.
@@ -373,11 +374,14 @@ R=  You should go to the dentist - Deberías ir al dentista.
 <br>
 R= How about you take your medicine and rest for a while - Qué tal si tomas tu medicamento y reposas un rato. 
 <br><br><br>
-
-<br>
+Presentación de personas con transtornos alimenticios:
+<br><br><br>
 <audio controls>
-
+  
     <source src="Podcast. INGLES..mp3">
+</audio>
+
+
 </audio>
 <br><br><br>
 
