--- a/matematicas2.html
+++ b/matematicas2.html
@@ -19,12 +19,13 @@
 </head>
 
 <body>
+      <div  class="fondomatematicas2"></div>
 
 <div class="contenedor">
 
 <div class="encabezado">
 <br>
-    PÁGINA WEB.  V.M.NOTICIA.
+    POLINOMIOS.
 </div>
 
 <div class="menu">
@@ -236,11 +237,14 @@
 <div  class="contenido">
 
 <div  class="textomat">
+    <div  class="imagenmat"></div>
+    <br><br>
 
    Consulta acerca de algebra.
-    <br><br><br><br>
+    <br><br><br><br> <br>
+
     ¿Qué son monomios, binomios y polinomios?
-    <br><br><br>
+    <br><br>
 
  
     Los monomios.
@@ -255,9 +259,9 @@
     <br>
     Son expresiones algebraicas que se conforman por varios términos. 
     <br><br>
-    <div  class="imagenmat"></div>
-    <br><br><br><br><br><br>
-    Como se suman, restan y multiplican polinomios.
+    
+   <br>
+    ¿Cómo se suman, restan y multiplican polinomios?
     <br><br><br>
     Suma de polinomios.
     <br><br>
