--- a/religion2.html
+++ b/religion2.html
@@ -19,12 +19,12 @@
 </head>
 
 <body>
-
+<div  class="fondoreligion2"></div>
 <div class="contenedor">
 
 <div class="encabezado">
 <br>
-    PÁGINA WEB.  V.M.NOTICIA.
+    HINDUISMO.
 
 </div>
 
@@ -235,11 +235,11 @@
 <div  class="contenido">
     <div class="textorel">
 
-Hinduismo. Preguntas.
-<br><br>
+
  
         <div  class="imagenrel"></div>
-        <br><br>
+        <br><br>Hinduismo. Preguntas.
+        <br><br><br><br><br><br><br><br><br><br><br>
  1) ¿Qué investiga el hinduismo?
         <br><br>
 R= el induismo se basa en la investigacion y la creencia de la reencarnacion y la liberacion.
