--- a/sociales2.html
+++ b/sociales2.html
@@ -20,12 +20,13 @@
 
 <body>
 
+    <div  class="bos"></div>
+
 <div class="contenedor">
 
 <div class="encabezado">
 <br>
-    PÁGINA WEB.  V.M.NOTICIA.
-
+    INDEPENDENCIA DE HISPANOAMERICA.
 </div>
 
 <div class="menu">
@@ -236,7 +237,7 @@
 
 <div  class="contenido">
 <div  class="imagensoci"></div>
-    <div  class="textosoc">
+    <div  class="textosoci">
 
         Independencia de las colonias americanas.
         <br><br><br><br>
@@ -266,7 +267,7 @@ Cambios políticos y económicos:
 Cambios culturales y sociales son explicados en el siguiente video:
 
  <br><br>
-video*
+
 <br><br><br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/0ZzqzNKAOLg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                                                                          V.M.NOTICIA.
