--- a/tecnologia2.html
+++ b/tecnologia2.html
@@ -21,13 +21,14 @@
 </head>
 
 <body>
+  <div  class="fondotecnologia2"></div>
 
 <div class="contenedor">
 
 <div class="encabezado">
   <br>
 
-  PÁGINA WEB.  V.M.NOTICIA.
+  TEMAS ACERCA DE TECNOLOGIA.
 
 </div>
 
@@ -244,15 +245,17 @@ Ejemplo de un operador eléctrico:
 
 <br>
 <br><br><br><br><br>
-Objetos comunes que no sabias que contienen operadores eléctricos:
+Objetos comunes que contienen operadores eléctricos:
 <br>
+
 <br>
 
 <div  class="imagentecnol"></div>
-
 <br>
 
+
 <div  class="imagentecnolo"></div>
+
 <br>
 <div  class="imagentecnolog"></div>
 
@@ -320,7 +323,7 @@ aun que ademas de estas hay muchas otras, estas son las mas usadas.
 <br><br><br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ZNkHWaiBEvA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
  
-video*
+
 
 
 
