--- a/sociales3.html
+++ b/sociales3.html
@@ -231,6 +231,31 @@
 
 
 </div>
+<div  class="contenido"></div>
+   <div  class="textoins"> 
+    <br>
+    <br>
+    <br>
+       LA REVOLUCION INDUSTRIAL.
+       <br>
+       inforgrafia.
+       <br>
+       <br>
+       <br>
+       La revolucion industrial es el proceso historico que nos permitio pasar de un sistema de trabajo rural a uno mas complejo mediante la creaccion de las maquinas de vapor, que cambiarian la vida en todos los aspectos a largo plazo.
+
+
+
+
+
+       <div  class="imageninfg"></div>
+
+
+
+
+
+
+</div>
 
 </body>
 
