actualizacion 1 del 3 de noviembre

--- a/ingles3.html
+++ b/ingles3.html
@@ -206,6 +206,363 @@
 
 </div>
 
+<div  class="contenido">
+    <div  class="textoings"> 
+        8 simple principle to buld peace in your community – 8 principios básicos para construir la paz en tu comunidad.
+        <br>
+        <br>
+        <br>
+        8 Simple principles to build peace in
+your community
+If you switch on the TV news, open the
+newspaper or click onto a popular news
+website, there’s always news about a terrorist
+attack, war, ongoing conflict and a general lack
+of peace amongst different groups of people. In
+an increasingly globalised world, we should
+understand each other better, stand ever
+more united and strive for peace. Sadly, the
+truth is quite the opposite. There’s conflict in
+Israel/Palestine, Kashmir, Iraq, Afghanistan,
+Syria, all over the world in fact…
+As individuals and citizens, how do we deal
+with this? How does this relate to us? How can
+we make positive changes to enable us to live
+in peace?
+<br>
+<br>
+RULE #1: TREAT OTHERS THE
+WAY YOU WISH TO BE TREATED
+<br>
+The good old Golden Rule says
+it all: empathy, tolerance and
+peace. This principle teaches
+you to love yourself and love
+others. It spans cultures and
+faiths and is a universal age
+old concept which can’t fail!
+<br>
+<br>
+<div  class="imagenregla1">
+    
+</div>
+<br>
+<br>
+RULE #2: LISTEN TO HEAR WHAT OTHERS HAVE
+TO SAY, NOT TO SPEAK
+<br>
+Engage in dialogue with an open mind and the
+real will to listen to others. Only then will you be able
+to understand each other and build bridges. Change
+cannot happen and peace cannot be established if
+people are unable to communicate with others; to
+listen to their experiences and views and show
+empathy, understanding and compassion.
+<br>
+<br>
+RULE #3: ACCEPT DIFFERENCE OF
+OPINION
+<br>
+We all have different opinions and we may
+not all agree on the same things. Building
+compromise and mutual understanding is
+incredibly important. Sometimes we
+simply need to agree to disagree and
+recognise that there are different beliefs
+and forms of expression other than our
+own.
+<br>
+<br>
+RULE #4: DO NOT FIGHT VIOLENCE WITH
+VIOLENCE 
+<br>
+Violence is never the answer. Peace can
+only be brought through free will, dialogue,
+empathy and forgiveness. Do not stoop to
+same level as someone who is violent and
+therefore continue the vicious cycle. This
+does not change anything.
+<br>
+<br>
+RULE #5: ACCEPT THAT IDENTITY IS FLUID 
+<br>
+Any one person can have multiple aspects to their
+identity. Identity comprises many elements such as
+nationality, cultural-linguistic origin, age and religious
+beliefs. Identity can and does change, taking on many
+new forms and means of personal expression as we
+learn new languages, move home, adopt new beliefs,
+marry into a different tradition and experience life! Do
+not put people into a box. Avoid categorising people
+according to an us vs. them narrative and remember:
+we are all singular individuals with unique experiences.
+Such approaches and narratives are highly divisive and
+unproductive.
+<br>
+<br>
+RULE #6: AVOID
+STEREOTYPES 
+<br>
+Take people for the
+individuals they are. Avoid
+misconceptions, stereotypes
+and toxic narratives and get
+to know a person instead.
+This will avoid offence,
+misunderstandings and
+ultimately help you to create
+a real bond with others based
+on true understanding,
+empathy and trust. After all,
+no one likes to be judged –
+especially from the outsid
+<br>
+<br>
+RULE #7: APPROACH THE MEDIA
+WITH SKEPTICISM
+<br>
+Don’t just believe everything you see
+on the TV, in the newspapers or on
+the internet. Think objectively for
+yourself. Get to know the people and
+facts behind any story and don’t fall
+for media scapegoating. Stand
+united.
+<br>
+<br>
+RULE #8: BE CAREFUL OF THE LANGUAGE YOU
+USE
+<br>
+Your choice of language, alongside tone of voice
+and intonation all convey a message. Make sure
+that that message is positive. Be mindful of the
+language you use, avoiding anything with
+misogynistic, racist, Islamophobic, homophobic
+or anti-Semitic overtones. Do not underestimate
+the power of language – for better or for worse!
+And remember, it’s not always what you say,
+it’s how you say it.
+<br>
+<br>
+TRADUCCION:
+<br>
+<br>
+Si enciende las noticias de la televisión, abre el periódico o hace clic a un sitio web de noticias popular, siempre hay noticias sobre un ataque terrorista, una guerra, un conflicto en curso y una falta general de paz entre diferentes grupos de personas.
+<br>
+En un mundo cada vez más globalizado, debemos entendernos mejor, estar cada vez más unidos y luchar por la paz. Lamentablemente, la verdad es todo lo contrario. Hay conflictos en la Israel/Palestina, Cachemira, Irak, Afganistán, Siria, de hecho en todo el mundo…Como individuos ciudadanos, ¿Cómo lidiamos con esto? ¿Cómo se relaciona esto con nosotros? ¿Cómo podemos hacer cambios positivos que nos permitan vivir en paz?
+<br>
+<br>
+REGLA#1: TRATA A LOS DEMAS COMO DESEAS SER TRATADO.
+<br>
+La vieja regla de oro lo dice todo: empatía, tolerancia, y paz. Este principio te enseña a amarte a ti mismo y a amar a los demás.
+<br>
+¡Abarca culturas y religiones y es un concepto universal antiguo que no puede fallar!
+<br>
+<br>
+REGLA#2: ESCUCHE PARA OIR LO QUE OTROS TIENEN QUE DECIR, NO PARA HABLAR.
+<br>
+Entablar un dialogo con la mente abierta y la voluntad real de escuchar a los demás. Solo así podréis entenderos y tender puentes. El cambio no puede ocurrir y la paz no puede establecerse si las personas no pueden comunicarse con los demás; escuchar sus experiencias y puntos de vista u muestre empatía, comprensión y compasión.
+<br>
+<br>
+REGLA#3: ACEPTA LA DIFERENCIA DE OPINION.
+<br>
+Todos tenemos opiniones diferentes y puede que no todos estemos de acuerdo en las mismas cosas. Lograr compromisos y comprensión mutua es increíblemente importante. A veces simplemente necesitamos estar de acuerdo en no estar de acuerdo y reconocer que existen creencias y formas de expresión diferentes a las nuestras. 
+<br>
+<br>
+REGLA#4: NO COMBATIR LA VIOLENCIA CON VIOLENCIA.
+<br>
+La violencia nunca es la respuesta. La paz solo puede lograrse mediante el libre albedrio, el dialogo, la empatía y el perdón. No te rebajes al mismo nivel de alguien que es violento y, por lo tanto, continuas el circulo vicioso. Esto no cambia nada.
+<br>
+<br>
+REGLA#5: ACEPTA QUE LA IDENTIDAD ES FLUIDA.
+<br>
+Cualquier persona puede tener múltiples aspectos de su identidad. La identidad comprende muchos elementos como la nacionalidad, el origen cultural-lingüístico, la edad y creencias religiosas.
+<br>
+La identidad puede cambiar, y de hecho cambia, adoptando muchas nuevas formas y medios de expresión personal a medida que aprendamos nuevos idiomas, nos mudamos a casa, adoptamos nuevas creencias, nos casamos con una tradición diferente y experimentamos la vida. No pongas a la gente en una caja. Evite categorizar a las personas según una narrativa de nosotros versus ellos y recuerde: todos somos individuos singulares con experiencias únicas. Tales enfoques y narrativas son altamente divisivos y poco productivos.  
+<br>
+<br>
+REGLA#6: EVITE LOS ESTEREOTIPOS. 
+<br>
+Tome a las personas como los individuos estadounidenses que son. Evite conceptos erróneos, estereotipos y narrativas toxicas y, en su lugar, conozca a una persona. Hacer esto evitara ofensas, malentendidos y en última estancia le ayudara a crearse un vínculo real con los demás basados en una verdadera comprensión, empatía, y confianza. Después de todo, a nadie le gusta que lo juzguen, especialmente desde afuera. 
+<br>
+<br>
+REGLA#7: ACERQUESE A LOS MEDIOS CON ESCEPRICISMO.
+<br>
+No se limite a creer todo lo que dicen en la televisión, en los periódicos o en internet. Piensa objetivamente por eso mismo, conozca a las personas y los hechos lingüísticos detrás de cualquier historian y no caiga en la misoginia de convertir a los medios en chivos expiatorios, manténgase unidos. 
+<br>
+<br>
+REGLA#8: TEN CUIDADO CON EL IDIOMA QUE UTILIZAS. 
+<br>
+Su elección de idioma, junto con el tono de voz y la entonación, transmite un mensaje, asegúrate de que ese mensaje sea positivo. Sea consciente del lenguaje que utiliza y evite cualquier contenido que tenga connotaciones misóginas, racistas, islamofobicas, homofóbicas o antisemitas. No subestimes el poder del lenguaje, ¡para bien o para mal! Y recuerda, no siempre es lo que dices, si no como lo dices. 
+<br>
+<br>
+FRASES:
+<br>
+<br>
+REGLA#1
+<br>
+<br>
+p.s=My colleagues treated me as they wish to be treated.
+<br>
+p.p= My colleagues have treated me how they want to be treated 
+<br>
+<br>
+traduccion:
+<br>
+<br>
+p.s= Mis compañeros me trataron como de sean ser tratados. 
+<br>
+p.p= mis compañeros me han tratado como desean ser tratados. 
+<br>
+<br>
+REGLA#2
+<br>
+<br>
+p.s= i listened to my best friend what she had to say. 
+<br>
+p.p= i have listened to my best friend whatshe has to say.
+<br> 
+<br>
+traducción: 
+<br>
+<br>
+=escuche a mi mejor amiga lo que tenía que decir. 
+<br>
+=he escuchado a mi mejor amiga lo que tiene que decir. 
+<br>
+<br>
+REGLA#3
+<br>
+<br>
+p.s= i always accepted the difference of opinion with my brother. 
+<br>
+p.p= i have always accepted the difference of opinion with my brother. 
+<br>
+<br>
+Traducción: 
+<br>
+<br>
+=siempre acepte la diferencia de opinión con mi hermano. 
+<br>
+=siempre he aceptado la diferencia de opinión con mi hermano.
+<br>
+<br>
+REGLA#4
+<br>
+<br>
+p.s= i settled my conflicts with my mother through peace. 
+<br>
+p.p= i have resolved my conflicts with my mother through peace. 
+<br>
+<br>
+Traducción: 
+<br>
+<br>
+=arregle mis conflictos con mi madre a través de la paz.
+<br> 
+=he arreglado mis conflictos con mi madre a través de la paz. 
+<br>
+<br>
+REGLA#5
+<br>
+<br>
+p.s= i always respect my daughter’s identity. 
+<br>
+p.p= i have always respected my daughter’s identity. 
+<br>
+<br>
+Traducción:
+<br>
+<br>
+= Siempre respeto la identidad de mi hija. 
+<br>
+= siempre he respetado la identidad de mi hija.
+<br>
+<br>
+REGLA#6
+<br>
+<br>
+p.s= i never paid attention to stereotypes.
+<br>
+p.p= i have never paid attention to stereotypes. 
+<br>
+<br>
+Traducción: 
+<br>
+<br>
+= nunca le hice caso a los estereotipos.
+<br> 
+= nunca le he hecho caso a los estereotipos.
+<br>
+<br>
+REGLA#7
+<br>
+<br>
+p.s= my son researched the news very well to find out if it is true.
+<br> 
+p.p= my son has researched the news very well to find out if it is true.
+<br> 
+<br>
+Traducción: 
+<br>
+<br>
+= mi hijo investigo muy bien la noticia para saber si es cierta.
+<br> 
+= mi hijo ha investigado muy bien la noticia para saber si es cierta.
+<br>
+<br>
+REGLA#8
+<br>
+<br>
+p.s= i asked how i should speak to avoid offending someone.
+<br> 
+p.p= i have asked how i should speak to avoid offending someone.
+<br>
+<br> 
+Traducción: 
+<br>
+<br>
+= pregunte como debería hablar para evitar ofender a alguien.
+<br>
+= he preguntado cómo debería hablar para evitar ofender a alguien.
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
