--- a/matematicas3.html
+++ b/matematicas3.html
@@ -227,6 +227,20 @@
 </ul>
 
 </div>
+<div>
+    <div  class="textomat">
+<br>
+<br>
+<br>
+<br>
+VIDEO SOBRE:
+<br>
+<br>
+-2 casos de productos notables
+<br>
+-2 casos de factorizacion
+    </div>
+</div>
 
 
 
