--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -206,6 +206,23 @@
 
 </div>
 
+<div>
+    <div  class="textoteco">
+
+<br>
+<br>
+<br>
+<br>
+LA EVOLUCION DE LA COMUNICACION.
+<br>
+<br>
+<br>
+La evolución de la comunicación a lo largo de la historia ha sido un proceso fascinante que ha estado estrechamente relacionado con el desarrollo de la tecnología y la evolución de la sociedad. Ha sido un factor fundamental en la forma en que las personas se conectan, comparten información y construyen sociedades más interconectadas.  
+
+
+    </div>
+</div>
+
 </body>
 
 </html>
@@ -227,6 +244,8 @@
 </ul>
 
 </div>
+
+
 
 
 
