actualizacion 3 de noviembre

--- a/ingles3.html
+++ b/ingles3.html
@@ -292,6 +292,9 @@ listen to their experiences and views and show
 empathy, understanding and compassion.
 <br>
 <br>
+
+
+<div  class="imagenregla1"></div>
 RULE #3: ACCEPT DIFFERENCE OF
 OPINION
 <br>
@@ -561,6 +564,10 @@ Traducción:
 <br>
 <br>
 <br>
+<audio controls>
+  
+    <source src="podcast ingles periodo 3">
+</audio>
 
 
 
