--- a/matematicas3.html
+++ b/matematicas3.html
@@ -240,6 +240,10 @@ VIDEO SOBRE:
 <br>
 -2 casos de factorizacion
     </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/yFhf-1em_lM?si=O42A1RcT8CobkGqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+
+
 </div>
 
 
