--- a/sociales3.html
+++ b/sociales3.html
@@ -239,7 +239,7 @@
     <br>
        LA REVOLUCION INDUSTRIAL.
        <br>
-       inforgrafia.
+       infografia.
        <br>
        <br>
        <br>
@@ -249,7 +249,7 @@
 
 
 
-       <div  class="imageninfg"></div>
+       <div  class="infografia.sociales"></div>
 
 
 
