--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -221,6 +221,7 @@ La evolución de la comunicación a lo largo de la historia ha sido un proceso f
 
 
     </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ReiTzBEHnS4?si=e2DFwkD8FlwdrIjx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 </body>
