--- a/ingles3.html
+++ b/ingles3.html
@@ -266,22 +266,20 @@ in peace?
 RULE #1: TREAT OTHERS THE
 WAY YOU WISH TO BE TREATED
 <br>
+<div  class="imagenregla1"></div>
+<br>
 The good old Golden Rule says
 it all: empathy, tolerance and
 peace. This principle teaches
 you to love yourself and love
 others. It spans cultures and
 faiths and is a universal age
-old concept which can’t fail!
-<br>
-<br>
-<div  class="imagenregla1">
-    
-</div>
+old concept which can’t fail. 
 <br>
 <br>
 RULE #2: LISTEN TO HEAR WHAT OTHERS HAVE
 TO SAY, NOT TO SPEAK
+<br><div  class="imagenregla2"></div>
 <br>
 Engage in dialogue with an open mind and the
 real will to listen to others. Only then will you be able
@@ -289,14 +287,13 @@ to understand each other and build bridges. Change
 cannot happen and peace cannot be established if
 people are unable to communicate with others; to
 listen to their experiences and views and show
-empathy, understanding and compassion.
+empathy, understanding and compassion. <br><br> 
 <br>
 <br>
-
-
-<div  class="imagenregla1"></div>
 RULE #3: ACCEPT DIFFERENCE OF
 OPINION
+<br>
+<div  class="imagenregla3"></div>
 <br>
 We all have different opinions and we may
 not all agree on the same things. Building
@@ -305,12 +302,16 @@ incredibly important. Sometimes we
 simply need to agree to disagree and
 recognise that there are different beliefs
 and forms of expression other than our
-own.
+own. 
+<br>
+<br>
+<br>
 <br>
 <br>
 RULE #4: DO NOT FIGHT VIOLENCE WITH
 VIOLENCE 
 <br>
+<div  class="imagenregla4"></div>
 Violence is never the answer. Peace can
 only be brought through free will, dialogue,
 empathy and forgiveness. Do not stoop to
@@ -321,6 +322,7 @@ does not change anything.
 <br>
 RULE #5: ACCEPT THAT IDENTITY IS FLUID 
 <br>
+<div  class="imagenregla5"></div>
 Any one person can have multiple aspects to their
 identity. Identity comprises many elements such as
 nationality, cultural-linguistic origin, age and religious
@@ -338,6 +340,7 @@ unproductive.
 RULE #6: AVOID
 STEREOTYPES 
 <br>
+<div  class="imagenregla6"></div>
 Take people for the
 individuals they are. Avoid
 misconceptions, stereotypes
@@ -356,6 +359,7 @@ especially from the outsid
 RULE #7: APPROACH THE MEDIA
 WITH SKEPTICISM
 <br>
+<div  class="imagenregla7"></div>
 Don’t just believe everything you see
 on the TV, in the newspapers or on
 the internet. Think objectively for
@@ -368,6 +372,7 @@ united.
 RULE #8: BE CAREFUL OF THE LANGUAGE YOU
 USE
 <br>
+<div  class="imagenregla8"></div>
 Your choice of language, alongside tone of voice
 and intonation all convey a message. Make sure
 that that message is positive. Be mindful of the
@@ -566,7 +571,7 @@ Traducción:
 <br>
 <audio controls>
   
-    <source src="podcast ingles periodo 3">
+    <source src="podcastingles3.m4a">
 </audio>
 
 
